--- a/week5/large-5.css
+++ b/week5/large-5.css
@@ -104,7 +104,7 @@ ul {
 }
 
 .mainimage{
-    height: 300px;
+    height: 268px;
 }
 
 .summary1 {
@@ -142,4 +142,149 @@ ul {
 .summary1 p {
     font-size: 15px;
     color: white;
+}
+
+.fivedaytitle {
+    height: 20px;
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.fiveday {
+    height: 80px;
+}
+
+.fivedaycast {
+    border: thin black solid;
+    height: 78px;
+    background-color: rgb(53, 143, 53);
+    width: 30%;
+    margin: 0 auto;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 20px;
+    color: white;
+}
+
+td {
+    height: 52px;
+    text-align: center;
+    background-color: white;
+}
+
+.snow1 {
+    width: 20px;
+    height: 20px;  
+}
+
+.article {
+    background-color: lightgreen;
+    height: 260px;
+}
+
+.articlebody {
+    width: 50%;
+    border: thin solid black;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.articlewords {
+    float: left;
+    width: 60%;
+    height: 258px;
+}
+
+.articlepic {
+    float: left;
+    width: 40%;
+    height: 258px;
+}
+
+.articleparagraph {
+    width: 90%;
+    height: 258px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.articleparagraph h3 {
+    font-size: 25px;
+    line-height: 2px;
+}
+
+.articleparagraph p {
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
+}
+
+.articlepic1 {
+    width: 90%;
+    height: 220px;
+    margin-top: 18px;
+    margin-left: 10px;
+    background-image: url("campfire.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.informationbody {
+    height: 260px;
+}
+
+.information {
+    width: 50%;
+    height: 258px;
+    border: thin solid black;
+    margin: 0 auto;
+    margin-top: 10px;
+    background-color: lightgreen;
+}
+
+.map1 {
+    float: left;
+    width: 40%;
+    height: 258px;
+}
+
+.contactinfo {
+    float: left;
+    width: 60%;
+    height: 258px;
+}
+
+.mappic {
+    border: thin solid black;
+    width: 220px;
+    background-color: red;
+    height: 220px;
+    margin-left: 15px;
+    margin-top: 19px;
+}
+
+.contacts {
+    width: 90%;
+    height: 258px;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;   
+}
+
+footer {
+    height: 25px;
+    background-color: lightgreen;
+    margin-top: 10px;
 }
