--- a/week8/large-7.css
+++ b/week8/large-7.css
@@ -319,4 +319,69 @@ footer a:active{
     box-shadow: 0 .5rem 1rem #666666;
 }
 
+fieldset {
+    border: thin solid black;
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+legend {
+    padding: 0.2em 0.5em;
+    color:black;
+    text-align: center;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=number], select {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=date], select {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: rgb(134, 15, 15);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: black;
+}
+
+#comments {
+    width: 100%;
+    height: 80px;
+    border: 2px solid black;
+    border-radius: 4px;
+}
+
 }
